DecodeHtmlCharacterReferences